--- a/em/skin/theme_resources/video.html
+++ b/em/skin/theme_resources/video.html
@@ -311,6 +311,20 @@
          return false;
     });
 
+    function resizePlayer(){ 
+        if ($(window).width() < 650 ) {
+            mejs.players[0].setPlayerSize($(window).width()-25,($(window).width()-25)/1.75);
+            mejs.players[0].setControlsSize();
+            $('div.videobar').width($(window).width()-25);
+            try{ mejs.players[0].setVideoSize($(window).width()-25,($(window).width()-25)/1.75); } catch(err) {}
+        } else {
+            $('div.videobar').attr('style','');
+        }
+    };
+
+    $(document).ready(resizePlayer);
+    $(window).resize(resizePlayer);
+
 </script>
 
 </body>
