add blogroll portlet for em.org

--- a/em/skin/theme_resources/text.html
+++ b/em/skin/theme_resources/text.html
@@ -148,6 +148,20 @@
                                 <a href="#" id="more-comments">More...</a>
                             </div>
                         </div>
+
+                        <div class="sidebar-section shade blogroll-portlet">
+                            <span class="column-title-icon"></span>
+                            <div class="column-title ">
+                                <span class="column-title-icon"></span>
+                                <h4 id="blogroll-title">Blogroll</h4>
+                            </div>
+                            <ul id="blogroll-right-portlet">
+                                <li><a href="#"><p class="date">May, 16</p><h5>philippe on Trou et Construction Citerne</h5></a></li>
+                                <li><a href="#"><p class="date">May, 19</p><h5>philippe on Trou et Construction Citerne</h5></a></li>
+                                <li><a href="#"><p class="date">July, 02</p><h5>philippe on Trou et Construction Citerne</h5></a></li>
+                            </ul>
+                        </div>
+
                 </div>
             </div>
         </div>
