--- a/em/skin/theme_resources/author.html
+++ b/em/skin/theme_resources/author.html
@@ -28,44 +28,44 @@
   <!--[if lt IE 9]>
     <script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    
+
     <span id="css"></span>
-    
+
 </head>
 <body>
-    <div id="top-menu">
-        <div class="row no-v-padding">
-            <ul class="header-menu-item" id="language-menu">
-                <li>
-                    <a href="#" class="english language">English</a>
-                </li>
-                <li>
-                    <a href="#" class="bahasa language">Bahasa Indonesia</a>
-                </li>
-                </ul>
-                <ul class="header-menu-item" id="user-menu">
-                    <li>
-                        <a href="#" class="user">
-                            User
-                        </a>
-                    </li>
-                    <li>
-                        <ul class="dropdown shade">
-                        </ul>
-                    </li>
-                </ul>
-        </div>
-    </div>
     <div id="upper-container">
         <div class="row no-v-padding header">
-           <div class="twelve columns header">
-                <a class="main-title">
-                    <div class="one column main-logo"></div>
+            <div class="twelve columns header">
+                <a class="five columns main-title">
+                    <p>Social justice and environmental video from the Asia Pacific</p>
                 </a>
+                <div class="top-menu">
+                    <ul class="header-menu-item" id="language-menu">
+                        <li>
+                            <a href="#" class="english language">English</a>
+                        </li>
+                        <li>
+                            <a href="#" class="bahasa language">Bahasa Indonesia</a>
+                        </li>
+                    </ul>
+                    <ul class="header-menu-item" id="user-menu">
+                        <li>
+                            <a href="#" class="user">
+                                User
+                            </a>
+                        </li>
+                        <li>
+                            <ul class="dropdown shade">
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+
                 <div class="six columns menu">
                     <div class="search">
                         <input type="text" id="searchGadget" class="text-input" name="searchGadget" value="Search">
                     </div>
+
                     <ul class="header-menu-item" id="publish-menu">
                         <li class="header-button">
                             <a class="user">
@@ -75,8 +75,9 @@
                        <li>
                             <ul class="dropdown shade">
                             </ul>
-                        </li>
+                       </li>
                     </ul>
+
                     <ul class="header-menu-item" id="browse-menu">
                         <li class="header-button">
                             <a class="user">
