fix footer on video view

--- a/em/skin/theme_resources/video.html
+++ b/em/skin/theme_resources/video.html
@@ -70,10 +70,10 @@
                     <ul class="header-menu-item" id="publish-menu">
                         <li class="header-button">
                             <a class="user">
-                                Upload2
+                                Upload
                             </a>
                         </li>
-                        <li>
+                       <li>
                             <ul class="dropdown shade">
                             </ul>
                         </li>
@@ -84,7 +84,7 @@
                                 Browse
                             </a>
                         </li>
-                        <li>
+                       <li>
                             <ul class="dropdown shade">
                             </ul>
                         </li>
@@ -93,6 +93,7 @@
             </div>
         </div>
     </div>
+
 
     <div id="mid-container">
         <div class="video-content row">
@@ -247,43 +248,13 @@
             <div class="three columns engage">
                 <h5>EngageMedia</h5>
             </div>
-            
-            <div class="three columns">
-                <a href="/about-us"><h5>About Us</h5></a>
+            <div class="columns">
                 <ul id="navigation-tree">
                     <li>Editorial Policy</li>
                     <li>Help</li>
                     <li>Support Us</li>
                     <li>Get Involved</li>
                     <li>Donate</li>
-                </ul>
-            </div>
-            <div class="three columns">
-                <a href="/Projects"><h5>Our Projects</h5></a>
-                <ul id="projects-tree">
-                    <li>Technology</li>
-                    <li>Research & Publications</li>
-                    <li>Content & Compilations</li>
-                    <li>Network Building & Training</li>
-                    <li>Translations</li>
-                </ul>
-            </div>
-            <div class="three columns" id="newsletter-footer">
-                <h5>Stay In Touch</h5>
-                <ul>
-                    <li>
-                        Subscribe to our Newsletter
-                        <form action="" method="post">
-                            <input type="text" id="newsletter-input" class="text-input" name="newsletter-input" value="">
-                            <input type="submit" id="newsletter-submit" class="button small" name="newsletter-submit" value="Go">
-                        </form>
-                    </li>
-                    <li>Contact Us</li>   
-                    <li>
-                        <span class="social-title">Social Media</span>
-                        <span class="fb"></span>
-                        <span class="twitter"></span>
-                    </li>                 
                 </ul>
             </div>
         </div>
