Improve layout of author page template and featured video

--- a/em/skin/theme_resources/author.html
+++ b/em/skin/theme_resources/author.html
@@ -149,7 +149,7 @@
             </div>
         </div>
 
-        <div class="full row no-v-padding row-title">
+        <div class="full row no-v-padding row-title videos-listing-header">
             <h4>Videos</h4>
             <a href="#" class="rss icon rss-videos"></a>
         </div>
@@ -259,7 +259,7 @@
             <div class="six columns centered load-more"><a class="button large" href="#">Load More</a></div>
         </div>
 
-        <div class="full row no-v-padding row-title">
+        <div class="full row no-v-padding row-title news-listing-header">
             <h4>Latest News</h4>
             <a href="#" class="rss icon rss-news"></a>
         </div>
@@ -286,7 +286,7 @@
             </div>
         </div>
 
-        <div class="full row no-v-padding row-title">
+        <div class="full row no-v-padding row-title events-listing-header">
             <h4>Latest Events</h4>
             <a href="#" class="rss icon rss-events"></a>
         </div>
