--- a/em/skin/theme_resources/index.html
+++ b/em/skin/theme_resources/index.html
@@ -244,7 +244,7 @@
                         
                         block.find('a.featuredItemTitle').text(item.title);                       
                         block.find('a.featuredItemTitle').attr('href', item.url);
-                        block.find('a.featuredItemTitle').attr('title', item.description);
+                        block.find('a.featuredItemTitle').attr('title', item.description.substr(0,130));
                         
                         block.find('div.rollover').text(item.date);
                         if (item.countries) {
@@ -253,7 +253,7 @@
                             block.find('div.rollover span.country a').attr('href', item.countries.url);
                         }
                         block.find('div.rollover').prepend('<p><a /></p');
-                        block.find('div.rollover p a').text(item.description);
+                        block.find('div.rollover p a').text(item.description.substr(0,130));
                         block.find('div.rollover p a').attr('href', item.url);
                         block.find('div.rollover span.country a').text(item.countries.title);
                         block.find('div.rollover span.country a').attr('href', item.countries.url);
