add logo to footer

--- a/em/skin/theme_resources/author.html
+++ b/em/skin/theme_resources/author.html
@@ -327,7 +327,7 @@
     <div id="lower-container">
         <div class="row footer">
             <div class="three columns engage">
-                <h5>Plumi</h5>
+                <img src="stylesheets/images/logo-footer.png" class="footer-logo" />
             </div>
             <div class="columns">
                 <ul id="navigation-tree">
