--- a/em/skin/theme_resources/text.html
+++ b/em/skin/theme_resources/text.html
@@ -122,7 +122,7 @@
     <div id="lower-container">
         <div class="row footer">
             <div class="three columns engage">
-                <h5>EngageMedia</h5>
+                <img src="stylesheets/images/logo-footer.png" class="footer-logo" />
             </div>
             <div class="columns">
                 <ul id="navigation-tree">
