--- a/em/skin/theme_resources/video.html
+++ b/em/skin/theme_resources/video.html
@@ -177,7 +177,7 @@
                 <div class="sidebar-section shade">
                     <div class="column-title">
                         <span class="column-title-icon"></span>
-                        <h4 id='news-title'>Other videos by this author</h4>
+                        <h4 id='news-title'>Other videos by this member</h4>
                     </div>
                     <ul class="video-list">
                         <li class="video-item">
@@ -246,7 +246,7 @@
     <div id="lower-container">
         <div class="row footer">
             <div class="three columns engage">
-                <h5>EngageMedia</h5>
+                <img src="stylesheets/images/logo-footer.png" class="footer-logo" />
             </div>
             <div class="columns">
                 <ul id="navigation-tree">
