--- a/em/skin/theme_resources/index.html
+++ b/em/skin/theme_resources/index.html
@@ -184,7 +184,7 @@
     <div id="lower-container">
         <div class="row footer">
             <div class="three columns engage">
-                <h5>EngageMedia</h5>
+                <img src="stylesheets/images/logo-footer.png" class="footer-logo" />
             </div>
             <div class="columns">
                 <a href="/about-us"><h5>About Us</h5></a>
