--- a/em/skin/theme_resources/list.html
+++ b/em/skin/theme_resources/list.html
@@ -212,7 +212,7 @@
     <div id="lower-container">
         <div class="row footer">
             <div class="three columns engage">
-                <h5>Engagemedia</h5>
+                <img src="stylesheets/images/logo-footer.png" class="footer-logo" />
             </div>
             <div class="columns">
                 <ul id="navigation-tree">
