--- a/em/skin/theme_resources/taxonomy.html
+++ b/em/skin/theme_resources/taxonomy.html
@@ -324,7 +324,7 @@
     <div id="lower-container">
         <div class="row footer">
             <div class="three columns engage">
-                <h5>Plumi</h5>
+                <img src="stylesheets/images/logo-footer.png" class="footer-logo" />
             </div>
             <div class="three columns">
                 <a href="/about-us"><h5>About Us</h5></a>
