fix link on index page

--- a/em/skin/theme_resources/index.html
+++ b/em/skin/theme_resources/index.html
@@ -145,7 +145,7 @@
                         </a>
                     </div>
                     <div class="column-more">
-                        <a href="projects" id="more-projects">More Projects</a>
+                        <a href="Projects" id="more-projects">More Projects</a>
                     </div>
                 </div>
             </div>
