CSS fixes - Better screens adaptivity

--- a/em/skin/theme_resources/search.html
+++ b/em/skin/theme_resources/search.html
@@ -50,7 +50,10 @@
     <div id="upper-container">
         <div class="row no-v-padding header">
            <div class="twelve columns header">
-                <a class="main-title">
+
+                <a href="http://staging.engagemedia.org" title="EngageMedia" class="mobile-header mobile-visible">EngageMedia</a>
+
+                <a class="main-title mobile-hidden">
                     <div class="one column main-logo"></div>
                 </a>
                 <div class="six columns menu">
