--- a/em/skin/theme_resources/text.html
+++ b/em/skin/theme_resources/text.html
@@ -35,7 +35,10 @@
         <div id="upper-container">
         <div class="row no-v-padding header">
             <div class="twelve columns header">
-                <a class="five columns main-title">
+
+                <a href="http://staging.engagemedia.org" title="EngageMedia" class="mobile-header mobile-visible">EngageMedia</a>
+
+                <a class="five columns main-title mobile-hidden">
                     <p>Social justice and environmental video from the Asia Pacific</p>
                 </a>
                 <div class="top-menu">
