CSS fixes - Better screens adaprivity #2

--- a/em/skin/theme_resources/author.html
+++ b/em/skin/theme_resources/author.html
@@ -37,7 +37,7 @@
         <div class="row no-v-padding header">
             <div class="twelve columns header">
 
-                <a href="http://staging.engagemedia.org" title="EngageMedia" class="mobile-header mobile-visible">EngageMedia</a>
+                <a class="mobile-header mobile-visible">EngageMedia</a>
 
                 <a class="five columns main-title mobile-hidden">
                     <p>Social justice and environmental video from the Asia Pacific</p>
