--- a/em/skin/theme_resources/list.html
+++ b/em/skin/theme_resources/list.html
@@ -244,83 +244,61 @@
         
     jQuery('.search-toggle').bind('click', function(){
 
-        if( jQuery(this).hasClass( 'active' ) ){
+            if( jQuery(this).hasClass( 'active' ) ){
 
-            jQuery(this).removeClass('active');
+                jQuery(this).removeClass('active');
 
-            jQuery('div.row.header div.menu').css('display', 'none');
-        }
-        else{
+                jQuery('.em-navbar').css('display', 'none');
 
-            jQuery('.nav-toggle').removeClass('active');
+                jQuery('div.row.header div.menu').css('display', 'block');
+                jQuery('div.row.header div.menu > .header-menu-item').css('display', 'block');
 
-            jQuery('.em-navbar').css('display', 'none');
+                jQuery('div.row.header div.menu > .search').css('display', 'none');                
+            }
+            else{
 
-            jQuery(this).addClass('active');
+                jQuery(this).addClass('active');
 
-            jQuery('div.row.header div.menu').css('display', 'block');
-        }
+                jQuery('.nav-toggle').removeClass('active');
 
-        setTimeout(function(){
+                jQuery('.em-navbar').css('display', 'none');
 
-            if( jQuery('.unisubs-videoTab').length && jQuery('.videobar').length ){
+                jQuery('div.row.header div.menu').css('display', 'block');
+                jQuery('div.row.header div.menu > .header-menu-item').css('display', 'none');
 
-                var t = jQuery('.videobar').offset();
-
-                jQuery('.unisubs-videoTab').attr('style', 'visibility: visible !important; left: 16px !important; top: '+t.top +'px !important;');
+                jQuery('div.row.header div.menu > .search').css('display', 'block');
             }
 
-        }, 10);
-    });
+            setTimeout(function(){
 
-    jQuery('.nav-toggle').bind('click', function(){
+                if( jQuery('.unisubs-videoTab').length && jQuery('.videobar').length ){
 
-        if( jQuery(this).hasClass( 'active' ) ){
+                    var t = jQuery('.videobar').offset();
 
-            jQuery(this).removeClass('active');
+                    jQuery('.unisubs-videoTab').attr('style', 'visibility: visible !important; left: 16px !important; top: '+t.top +'px !important;');
+                }
 
-            jQuery('.em-navbar').css('display', 'none');
-        }
-        else{
+            }, 10);
+        });
 
-            jQuery('.search-toggle').removeClass('active');
+        jQuery('.nav-toggle').bind('click', function(){
 
-            jQuery('div.row.header div.menu').css('display', 'none');
+            if( jQuery(this).hasClass( 'active' ) ){
 
-            jQuery(this).addClass('active');
+                jQuery(this).removeClass('active');
+                jQuery('.em-navbar').css('display', 'none');
 
-            jQuery('.em-navbar').css('display', 'block');
-        }
-
-        setTimeout(function(){
-
-            if( jQuery('.unisubs-videoTab').length && jQuery('.videobar').length ){
-                var t = jQuery('.videobar').offset();
-
-                jQuery('.unisubs-videoTab').attr('style', 'visibility: visible !important; left: 16px !important; top: '+t.top +'px !important;');
+                jQuery('div.row.header div.menu').css('display', 'block');
+                jQuery('div.row.header div.menu > .header-menu-item').css('display', 'block');
             }
+            else{
 
-        }, 10);
-    });
+                jQuery(this).addClass('active');
+                jQuery('.em-navbar').css('display', 'block');
 
-    jQuery("ul.em-navbar li a").live('click', function(){
-
-        // if( jQuery(window).width() < 640 ){
-
-            if( jQuery(this).parent('li').find(' > ul').length ){
-
-                if( jQuery(this).parent('li').hasClass('active') ){
-
-                    jQuery(this).parent('li').removeClass('active');
-                }
-                else{
-
-                    jQuery("ul.em-navbar > li").removeClass('active');
-
-                    jQuery(this).parent('li').addClass('active');
-                }
-
-                return false;
+                jQuery('.search-toggle').removeClass('active');
+                jQuery('div.row.header div.menu').css('display', 'none');
+                jQuery('div.row.header div.menu > .search').css('display', 'none');
             }
 
             setTimeout(function(){
@@ -330,10 +308,40 @@
 
                     jQuery('.unisubs-videoTab').attr('style', 'visibility: visible !important; left: 16px !important; top: '+t.top +'px !important;');
                 }
-
             }, 10);
-        // }
-    });
+        });
+
+        jQuery("ul.em-navbar li a").live('click', function(){
+
+            // if( jQuery(window).width() < 640 ){
+
+                if( jQuery(this).parent('li').find(' > ul').length ){
+
+                    if( jQuery(this).parent('li').hasClass('active') ){
+
+                        jQuery(this).parent('li').removeClass('active');
+                    }
+                    else{
+
+                        jQuery("ul.em-navbar > li").removeClass('active');
+
+                        jQuery(this).parent('li').addClass('active');
+                    }
+
+                    return false;
+                }
+
+                setTimeout(function(){
+
+                    if( jQuery('.unisubs-videoTab').length && jQuery('.videobar').length ){
+                        var t = jQuery('.videobar').offset();
+
+                        jQuery('.unisubs-videoTab').attr('style', 'visibility: visible !important; left: 16px !important; top: '+t.top +'px !important;');
+                    }
+                }, 10);
+
+            // }
+        });
 
 </script>
 </body>
